# sugatan_shopify

./: .gcloudignore  .gitignore  Dockerfile  Pipfile  assertions.py  broadcast.py  config.json  main.py  manual.py  models.py  pyproject.toml  requirements.txt  schema.json  test_integrations.py  test_units.py  update.sql.j2
.github/workflows/: main.yaml
configs/: Orders.json  clients.json
controller/: bigquery.py  handler.py  shopify.py  tasks.py
models/: models.py
templates/: read_max_incremental.sql.j2
test/: test_auto.py  test_broadcast.py  test_manual.py  test_units.py  utils.py
